# iXPhoneCam

./: .gitignore  README.md
PhoneCam/: IMPLEMENTATION_SUMMARY.md  README.md  TECH_STACK_README.md
PhoneCam/docs/: AUDIO_STREAMING_LESSONS.md  IMPLEMENTATION_CHANGES.md  PC_WINDOWS_RELEASE_PACKAGE.md  PLAY_STORE_PUBLISHING_PACKAGE.md  PROJECT_INDEX.md  QUICK_REFERENCE.md
PhoneCam/mobile-android/: gradlew  gradlew.bat
PhoneCam/mobile-android/app/: build.gradle.kts
PhoneCam/mobile-android/app/src/main/: AndroidManifest.xml
PhoneCam/mobile-android/app/src/main/java/com/phonecam/: PhoneCamApp.kt
PhoneCam/mobile-android/app/src/main/java/com/phonecam/camera/: CameraManager.kt  PhoneSpeakerPlayer.kt  VideoEncoder.kt
PhoneCam/mobile-android/app/src/main/res/drawable/: ic_camera.xml  ic_launcher_foreground.xml
PhoneCam/pc-client-windows/: CMakeLists.txt  test_decode.cpp
PhoneCam/pc-client-windows/driver/: FrameBuffer.cpp  FrameBuffer.h  VirtualCamFilter.cpp  VirtualCamFilter.h  VirtualCamPin.cpp  VirtualCamPin.h  driver.def
PhoneCam/pc-client-windows/installer/: LICENSE.txt  setup.iss
PhoneCam/pc-client-windows/service/: AudioPlayer.cpp  AudioPlayer.h  BluetoothClient.h  Decoder.h  Error.h  Logger.cpp  PacketReader.cpp  PacketReader.h  Protocol.h  ReverseAudioCapture.cpp  ReverseAudioCapture.h  TransportClient.cpp  UsbClient.cpp  main.cpp
PhoneCam/pc-client-windows/ui/PhoneCamUI/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
PhoneCam/shared/: protocol.md
PhoneCam/tools/: Setup-PhoneCamVirtualAudio.ps1  Start-PhoneCamUsb.ps1
iXCam_Webcam/: .gitignore
iXCam_Webcam/docs/: BEFORE_AFTER_COMPARISON.md  ERROR_REFERENCE.md  PRODUCTION_HARDENING.md  PRODUCTION_SETUP.md  setup-guide.md
iXCam_Webcam/mobile-android/: settings.gradle.kts
iXCam_Webcam/mobile-android/app/: build.gradle.kts  proguard-rules.pro
iXCam_Webcam/mobile-android/app/src/main/: AndroidManifest.xml
iXCam_Webcam/mobile-android/app/src/main/res/values/: themes.xml
iXCam_Webcam/pc-client-windows/driver/: DllMain.cpp  FrameBuffer.cpp  FrameBuffer.h  VirtualCamPin.cpp  VirtualCamPin.h
iXCam_Webcam/pc-client-windows/installer/: setup.iss
iXCam_Webcam/pc-client-windows/service/: AudioPlayer.cpp  AudioPlayer.h  BluetoothClient.cpp  Decoder.cpp  Logger.h  Protocol.h  ReverseAudioCapture.cpp  TransportClient.cpp  TransportClient.h  UsbClient.h  main.cpp
iXCam_Webcam/pc-client-windows/ui/PhoneCamUI/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  PhoneCamUI.csproj
iXCam_Webcam/shared/: protocol.md
iXCam_Webcam/tools/: Start-PhoneCamUsb.ps1
(+16 files in other folders)
